--- a/tsconfig-yunzai.json
+++ b/tsconfig-yunzai.json
@@ -1,10 +1,11 @@
 {
   "compilerOptions": {
     "target": "ES6",
-    "module": "commonjs",
+    "module": "es6",
     "strict": true,
+    "moduleResolution": "node",
     "allowSyntheticDefaultImports": true,
-    "outDir": "dist"
+    "outDir": "plugin-dist"
   },
   "include": [
     "src/**/*"
