--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "pu-client",
-  "version": "1.0.14",
-  "description": "pocket universe client",
+  "name": "fufuu",
+  "version": "1.0.2",
+  "description": "e?",
   "main": "app.js",
   "scripts": {
     "build": "tsc",
@@ -17,7 +17,7 @@
     "logs": "pm2 logs --name pu-client"
   },
   "keywords": [],
-  "author": "",
+  "author": "seiuna",
   "dependencies": {
     "chalk": "^4.1.2",
     "copy-paste": "^1.5.3",
@@ -26,7 +26,7 @@
     "log4js": "^6.9.1",
     "node-schedule": "^2.1.1",
     "nodemailer": "^6.9.7",
-    "pu-client": "^1.0.20"
+    "pu-client": "^1.0.21"
   },
   "devDependencies": {
     "@types/lodash": "^4.14.202",
