修改扫描活动的频率10s -> 60s

--- a/package.json
+++ b/package.json
@@ -7,7 +7,12 @@
     "build": "tsc",
     "build-plugin": "tsc -p tsconfig-yunzai.json",
     "dev": "ts-node ./src/app.ts",
-    "login": "tsc && node ./dist/loginApp.js",
+    "login": "ts-node ./src/login.ts",
+
+
+
+
+
     "update": "git fetch && git merge",
     "start": "tsc && pm2 start ./dist/app.js --name pu-client",
     "restart": "tsc && pm2 restart ./dist/app.js --name pu-client",
