--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "fufuu",
-  "version": "1.1.0",
+  "version": "1.1.1",
   "description": "e?",
   "main": "app.js",
   "scripts": {
@@ -26,7 +26,7 @@
     "log4js": "^6.9.1",
     "node-schedule": "^2.1.1",
     "nodemailer": "^6.9.7",
-    "pu-client": "^1.1.12"
+    "pu-client": "1.1.12"
   },
   "devDependencies": {
     "@types/lodash": "^4.14.202",
