--- a/package.json
+++ b/package.json
@@ -19,14 +19,14 @@
   "keywords": [],
   "author": "seiuna",
   "dependencies": {
+    "@pu-client/pukoudai-client": "^1.1.14",
     "chalk": "^4.1.2",
     "copy-paste": "^1.5.3",
     "enquirer": "^2.4.1",
     "lodash": "^4.17.21",
     "log4js": "^6.9.1",
     "node-schedule": "^2.1.1",
-    "nodemailer": "^6.9.7",
-    "pu-client": "1.1.12"
+    "nodemailer": "^6.9.7"
   },
   "devDependencies": {
     "@types/lodash": "^4.14.202",
