--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,33 +1,34 @@
-name: Release
+name: Main
 
-on:
-  push:
-    # Sequence of patterns matched against refs/tags
-    tags:
-      - "v*" # Push events to matching v*, i.e. v1.0, v20.15.10
+on: push
 
 jobs:
   build:
-
     runs-on: ubuntu-latest
-
     steps:
-      - uses: actions/checkout@v3
+      - name: Checkout
+        uses: actions/checkout@v4
+      #      - name: Build
+      #        run: echo ${{ github.sha }} > Release.txt
+      #      - name: Test
+      #        run: cat Release.txt
       - uses: actions/setup-node@v3
         with:
           node-version: 20
-
+          registry-url: https://npm.pkg.github.com/
       - name: install
         run: npm ci
 
       - name: build
         run: npm run build
 
-      - name: exe
+      - name: build exe
         run: pkg -t node18-win-x64 dist/app.js
 
-      - name: release
-        use: softprops/action-gh-release@v2
+      - name: Release
+        uses: softprops/action-gh-release@v2
+        if: startsWith(github.ref, 'refs/tags/')
         with:
-          files: dist/app-win.exe
-
+          files: |
+            Release.txt
+            LICENSE
