--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -18,7 +18,8 @@ jobs:
           registry-url: https://npm.pkg.github.com/
       - name: install
         run: npm ci
-
+        env:
+          NODE_AUTH_TOKEN: ${{secrets.GIT_TOKEN}}
       - name: build
         run: npm run build
 
