--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -15,6 +15,9 @@ jobs:
         with:
           node-version: 20
           registry-url: https://npm.pkg.github.com/
+      - name: login
+        run: echo //npm.pkg.github.com/:_authToken=${{secrets.GIT_TOKEN}} > ~/.npmrc
+
       - name: install
         run: npm ci
         env:
