--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -17,7 +17,7 @@ jobs:
           registry-url: https://npm.pkg.github.com/
 
       - name: login
-        run: echo //npm.pkg.github.com/:_authToken=${{secrets.GIT_TOKEN}} > ./.npmrc
+        run: echo //npm.pkg.github.com/:_authToken=${{secrets.GTH_TOKEN}} > ./.npmrc
 
       - name: out
         run: cat ./.npmrc
