--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@types/node-schedule": "^2.1.5",
     "@types/nodemailer": "^6.4.14",
     "ts-node": "^10.9.1",
-    "typescript": "^5.1.6"
+    "typescript": "^5.1.6",
+    "pkg": "^5.8.1"
   }
 }
