--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -30,7 +30,7 @@ jobs:
         run: npm run build
 
       - name: build exe
-        run: npx pkg -t node18-win-x64 dist/app.js
+        run: npx pkg -t node18-win-x64 dist/src/app.js
 
       - name: Release
         uses: softprops/action-gh-release@v2
