--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -41,6 +41,7 @@ jobs:
       - name: Release
         uses: softprops/action-gh-release@v2
         with:
+          if: startsWith(github.ref, 'refs/tags/')
           files: |
             Release.txt
             LICENSE
