--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -46,3 +46,5 @@ jobs:
           files: |
             Release.txt
             app.exe
+        env:
+          GITHUB_TOKEN: ${{secrets.GIT_TOKEN}}
