--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -45,7 +45,7 @@ jobs:
         uses: softprops/action-gh-release@v2
         with:
           if: startsWith(github.ref, 'refs/tags/')
-          tag_name: ${{ github.ref }}
+          tag_name: 3231
           files: |
             Release.txt
             app.exe
