--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -32,8 +32,15 @@ jobs:
       - name: build
         run: npm run build
 
-      - name: build exe
-        run: npx pkg -t node18-win-x64 dist/src/app.js
+      - name: build win
+        run: npx pkg -t node18-win-x64 dist/src/app.js -o fufuu for windows.exe
+
+      - name: build mac
+        run: npx pkg -t node18-mac-x64 dist/src/app.js fufuu for mac
+
+      - name: build linux
+        run: npx pkg -t node18-linux-x64 dist/src/app.js fufuu for linux
+
 
       - name: Build
         run: echo ${{ github.sha }} > Release.txt
@@ -44,10 +51,14 @@ jobs:
       - name: Release
         uses: softprops/action-gh-release@v2
         with:
-          if: startsWith(github.ref, 'refs/tags/')
-          tag_name: 3231
+          if: startsWith(github.ref, 'publish~')
+          tag_name: fufuu
+          generated_release_notes: CHANGELOG.md
           files: |
             Release.txt
             app.exe
+            fufuu for linux
+            fufuu for mac
+            fufuu for windows.exe
         env:
           GITHUB_TOKEN: ${{secrets.GIT_TOKEN}}
