--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -45,7 +45,7 @@ jobs:
         uses: softprops/action-gh-release@v2
         with:
           if: startsWith(github.ref, 'publish~')
-          tag_name: fufuu
+          tag_name: ${{ GITHUB_REF_NAME }}
           generated_release_notes: CHANGELOG.md
           files: |
             Release.txt
